name:          perhaps
category:      Data
version:       0
license:       BSD2
cabal-version: 1.18
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/perhaps/
bug-reports:   http://github.com/ekmett/perhaps/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
build-type:    Simple
synopsis:      Perhaps, a monad
description:   Perhaps, a monad.

extra-source-files:
  .hlint.yaml
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/ekmett/perhaps.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src

  build-depends:
    base >= 4.11 && < 5,
    mtl,
    transformers

  exposed-modules:
    Control.Monad.Perhaps
    Data.Perhaps
