name:          perhaps
category:      Data
version:       0
license:       BSD2
cabal-version: 1.12
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/perhaps/
bug-reports:   http://github.com/ekmett/perhaps/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
build-type:    Custom
synopsis:      Perhaps, a monad
description:   Perhaps, a monad.
tested-with:   GHC == 7.0.4
             , GHC == 7.2.2
             , GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.2

extra-source-files:
  .hlint.yaml
  CHANGELOG.md
  README.md

custom-setup
  setup-depends:
    base >= 4 && <5,
    Cabal >= 1.10 && < 2.3,
    cabal-doctest >= 1 && <1.1

source-repository head
  type: git
  location: git://github.com/ekmett/perhaps.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src

  build-depends:
    base                >= 4.3 && < 5,
    mtl                 >= 2.1 && < 2.3,
    transformers        >= 0.3 && < 0.6,
    transformers-compat >= 0.3 && < 1

  if impl(ghc >= 7.2) && impl(ghc < 7.6)
    build-depends: generic-deriving >= 0.3.1 && < 1.13

  if impl(ghc < 7.10)
    build-depends: void >= 0.5.0 && < 1

  if impl(ghc < 8.0)
    build-depends: semigroups >= 0.10 && < 1

  exposed-modules:
    Control.Monad.Perhaps
    Data.Perhaps

-- Verify the results of the examples
test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    perhaps,
    doctest   >= 0.11.1 && <0.16
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
